src/objects/Event_MDF__c.object
<CustomObject>
    <fields>
        <fullName>Agreement_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agreement Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Event Market Development Funds</relationshipLabel>
        <relationshipName>Event_MDFs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MDF_Amount__c</fullName>
        <label>MDF Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MDF_Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Account which the Market Development Fund (MDF) is associated</inlineHelpText>
        <label>MDF Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Event MDFs</relationshipLabel>
        <relationshipName>Event_MDFs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MDF_Partner_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MDF Partner Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.MDF_Partner_Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Event MDFs</relationshipLabel>
        <relationshipName>Event_MDFs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Received_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Received Payment</label>
        <type>Checkbox</type>
    </fields>
    <label>Event MDF</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MDF-{00000}</displayFormat>
        <label>Event MDF ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event MDFs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>